--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,11 +12,20 @@ body {
   padding: 2rem 10rem;
   margin: 0 auto;
 }
+.mt-10 {
+  margin-top: 80px;
+}
+.flex {
+  display: flex;
+}
+.mb-5 {
+  margin-bottom: 50px;
+}
 
 /* CSS for Navbar */
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   padding: 2rem 10rem;
   margin-bottom: 30px;
@@ -180,4 +189,69 @@ body {
 
 .inner-card p {
   font-size: 13px;
+}
+
+/* Info Section Css */
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  height: 800px;
+  margin-top: 40px;
+}
+.info-left {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.info-right {
+  width: 50%;
+  background-color: rgba(246, 250, 250, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+.info h3 {
+  font-size: 30px;
+  font-weight: 600;
+}
+.info-desc {
+  font-size: 15px;
+  width: 320px;
+  line-height: 28px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.numbers {
+  font-size: 80px;
+  font-weight: 800;
+  color: #1ea59a;
+}
+.supported-text {
+  font-size: 12px;
+}
+
+.info-left-details h4 {
+  font-size: 20px;
+  line-height: 25px;
+  font-weight: 600;
+}
+.info-left-details p {
+  width: 320px;
+  font-size: 15px;
+  line-height: 25px;
+}
+.icon {
+  height: 50px;
+  width: 50px;
+  background-color: rgba(30, 165, 154, 0.2);
+  border-radius: 50%;
+  margin-right: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* opacity: 10%; */
 }
