--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -2,6 +2,9 @@
 
 body {
   font-size: 16px;
+  /* position: relative;
+  min-height: 100%;
+  background-color: blue; */
 }
 * {
   margin: 0;
@@ -263,6 +266,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
+  margin-bottom: 60px;
 }
 
 .grid-heading {
@@ -301,4 +305,82 @@ body {
   display: inline-block;
   font-weight: 300;
   font-size: 13px;
+}
+
+/* Footer Section */
+footer {
+  position: relative;
+  bottom: 0;
+  height: 100px;
+  width: 100%;
+  /* background: red; */
+}
+
+.footer-container {
+  display: flex;
+  justify-content: space-between;
+  height: 500px;
+  /* background-color: #e3e3e3; */
+}
+
+.left-section {
+  width: 50%;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  background-color: #f6f6fb;
+  padding: 100px 0;
+}
+
+.left-section h2 {
+  color: #121212;
+  font-size: 40px;
+  width: 320px;
+  font-weight: 800;
+}
+.quote-circle {
+  width: 106px;
+  height: 106px;
+  border-radius: 50%;
+  background: #5959b3;
+  margin-bottom: 30px;
+}
+
+.right-section {
+  width: 50%;
+  padding: 100px 0;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: center; */
+  /* align-items: center; */
+}
+.right-section h3 {
+  text-align: center;
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 45px;
+  width: 400px;
+  margin: 0 auto;
+}
+.right-para {
+  font-size: 15px;
+  line-height: 35px;
+  text-align: center;
+  width: 400px;
+  margin: 0 auto;
+  font-weight: 300;
+}
+
+.signature {
+  font-size: 16px;
+  font-weight: 800;
+  text-align: center;
+  margin-top: 30px;
+}
+
+.light-signature {
+  font-size: 14px;
+  font-weight: 300;
+  color: #404852;
+  text-align: center;
 }
