--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -264,6 +264,20 @@ body {
 }
 
 /* Info Section Css */
+@media (max-width: 786px) {
+  .info {
+    flex-direction: column;
+    align-items: center;
+  }
+  .info-left {
+    width: 100% !important;
+    margin-bottom: 20px;
+  }
+  .info-right {
+    width: 100% !important;
+    padding-top: 30px;
+  }
+}
 
 .info {
   display: flex;
@@ -329,6 +343,19 @@ body {
 }
 
 /* Grid Section */
+
+@media (max-width: 786px) {
+  .grid-heading {
+    margin-top: 120px;
+    text-align: center;
+  }
+  .grid-container {
+    grid-template-columns: repeat(1, 1fr) !important;
+  }
+  .image-section {
+    width: 100% !important;
+  }
+}
 
 .grid-container {
   display: grid;
@@ -443,7 +470,7 @@ footer {
   font-size: 16px;
   font-weight: 800;
   text-align: center;
-  margin-top: 30px;
+  /* margin-top: 30px; */
 }
 
 .light-signature {
@@ -451,4 +478,36 @@ footer {
   font-weight: 300;
   color: #404852;
   text-align: center;
+}
+.footer-image-section {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 130px;
+  width: 400px;
+  margin: 0 auto;
+  padding: 0 50px;
+}
+
+.sm-footer-img {
+  height: 30px;
+  width: 30px;
+  background-color: #5959b3;
+}
+.md-footer-img {
+  height: 50px;
+  width: 50px;
+  background-color: #1ea59a;
+}
+.lg-footer-img {
+  height: 70px;
+  width: 70px;
+  background-color: #404852;
+}
+
+.footer-img {
+  border-radius: 50%;
+  opacity: 0.4;
+  background-image: url("../../assets/images/office.png");
+  background-size: contain;
 }
